--- a/index.html
+++ b/index.html
@@ -1,149 +1,111 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<!- Theme made by www.w3schools.com - No Copyright ->
-	<title> Bootstrap Theme Simply Me</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width-device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<style>
-	body {
-		font: 20px Montserrat, sans-serif;
-		line-height: 1.8;
-		color: #212121;
-	}
-	p {font-size: 16px;}
-	.margin {margin-bottom:45px;}
-	.bg-1{
-		background-color:#ff9800;
-		color: #ffffff;
-	}
-	.bg-2 {
-		background-color:#ff5722;
-		color: #ffffff;
-	}
-	.bg-3{
-		background-color:#ffe0b2;
-		color: #555555;
-	}
-	.bg-4{
-		background-color:#212121;
-		color: #fff;
-	}
-	.container-fluid {
-		padding-top:70px;
-		padding-bottom:70px;
-	}
-	.navbar {
-		padding-top: 15px; 
-		padding-bottom: 15px;
-		border: 0;
-		border-radius: 0;
-		margin-bottom:0;
-		font-size: 12px;
-		letter-spacing: 5px;
-	}
-	.navbar-nav li a:hover {
-		color: #1abc9c !important;
-	}
-	</style>
+<html><head>
+    <meta>
+    <title>Sport Space</title>
+    <meta>
+    <link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
+<div id="art-main">
+		<header class="art-header clearfix">
+			<div class="art-shapes">
+				<h1 class="art-headline" data-left="3.77%">
+					<p><img width="600" height="70" alt="" src="22.jpg"></p>
+				</h1>
+			</div>							
+		</header>
+			<nav class="art-nav clearfix">
+				<div class="art-nav-inner">
+				
+				<ul class="art-hmenu">
+				<li><a href="home.html">Home</a></li>
+				<li><a href="#">Race</a></li>
+				<li><a href="#">Basket</a></li>
+				<li><a href="#">MotoGP</a></li>
+				<li><a href="#">Volly</a></li>
+				<li><a href="#">Bulu Tangkis</a></li>
+				<li><a href="#">Renang</a></li>
+					</div>
+			</nav>
+		<div class="art-sheet clearfix">
+			<div class="art-layout-wrapper clearfix">
+				<div class="art-content-layout">
+					<div class="art-content-layout-row">
+						<div class="art-layout-cell art-content clearfix">
+						<article class="art-post art-article">
+							<div class="art-postcontent art-postcontent-0 clearfix">
+							<div class="art-content-layout">
+									<div class="art-content-layout-row" style="background:#636363;">
+									<div class="art-layout-cell layout-item-0" style="width: 33%;color:#FFF;" >
+										<p><img width="97" height="97" alt="" src="Pict.JPG" style="padding-left:10px;padding-right:29px;padding-bottom:20px;float:left; font-size:120px;color: #fff;text-shadow: 2px 2px 5px #77ff7777;margin-top: 0px"></p>
+										<h4>Aula Zahra</h4>
+										<p>Kekompakan team Aula Zahra dan teman-teman dari Universitas Ahmad Dahlan dalam setiap pertandingan.</p>
+										<p style="text-align: left;"><a href="#" class="art-button" >Klik Here</a></p>
+									</div>
+									<div class="art-layout-cell layout-item-0" style="width: 34%;color:#FFF;" >
+										<p><img width="97" height="97" alt="" src="Me.jfif" style="padding-left:10px;padding-right:29px;padding-bottom:20px;float:left; font-size:120px;color: #fff;text-shadow: 2px 2px 5px #fff;margin-top: 0px"></p>
+										<h4>Indra Wahyu Mei Trisna</h4>
+										<p>Prodi Sistem Informasi NIM : 2000016107.</p>
+										<p><a href="#" class="art-button">Klik Here</a></p>
+  
+									</div>
+									<div class="art-layout-cell layout-item-0" style="width: 33%;color:#FFF;" >
+										<p><img width="130" height="97" alt="" src="Rider.jpeg" style="padding-left:10px;padding-right:29px;padding-bottom:20px;float:left; font-size:120px;color: #fff;text-shadow: 2px 2px 5px #fff;margin-top: 0px"></p>
+										<h4>Nanda Elfitra</h4>
+										<p>Coach dari pembalap kita persiapkan Nanda untuk bersaing di kejuaraan Road Race di Jambi.</p>
+										<p><a href="#" class="art-button">Klik Here</a></p>
+									</div>
+									</div>
+								</div>
+  
+								<br/>
+								<hr/>
+								<div class="art-content-layout">
+									<div class="art-content-layout-row">
+										<div class="art-layout-cell layout-item-1" style="width: 67%; padding-left: 15px;"  >
+											<h1>Berita Terbaru</h1>
+											<p><img width="590" height="245" alt="" src="WSBK.jfif" class=""></p>
+											<p>Meski bisa menyamai poin kalau juara di race 2 WSBK, namun Toprak dinilai lebih unggul. Soalnya dia lebih banyak menang di WSBK 2021 ketimbang Jonathan Rea.
 
-<!-navbar->
-<nav class="navbar navbar-default">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">Biografi</a>
+												Kemenangan Rider dengan Nomor 54 itu juga mengakhiri dominasi Jonathan Rea yang selalu juara di enam edisi WSBK sebelumnya. Jalannya balap berlangsung seru karena salip menyalip sempat terjadi.
+												
+												Toprak sempat memimpin balapan tapi dia melebar di lap ke-12 sehingga disalip Jonathan Rea hingga finis di posisi pertama.</p>
+											<p><a href="#" class="art-button">Click</a></p>
+										</div>
+									<div class="art-layout-cell layout-item-0" style="width: 30%" >
+										<h1>Populer</h1>
+										<p><img width="97" height="97" alt="" src="Rossi.jfif" style="padding-right:20px;float:left;"></p>
+										Rossi tidak mampu meraih hasil positif. Dalam tujuh seri balapan, pembalap Petronas Yamaha SRT itu hanya mengumpulkan 15 poin.<br clear="all"><p>
+										<p><a href="#" class="art">Next</a></p>
+										<p><img width="97" height="97" alt="" src="Volly.jfif" style="padding-right:20px;float:left;"></p>
+										Tim putri Gresik Petrokimia Pupuk Indonesia dan tim putra Jakarta Pertamina Pertamax berhasil meraih kemenangan dalam seri kedua.<br clear="all">
+										<p><a href="#" class="art">Next</a></p>
+										<p><img width="97" height="97" alt="" src="berita6.jpg" style="padding-right:20px;float:left;"></p>
+										Persib bandung merayakan ulang tahun yang ke 83, semua pemain berharap kedepanya persib akan sukses.<br clear="all">
+										<p><a href="#" class="art">Next</a></p>
+									</div>
+
+									</div>
+								</div>
+							</div>							
+						</article>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="collapse navbar-collapse" id="myNavbar"> 
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Cabang olahraga</a></li>
-			<li><a href="#">Prestasi</a></li>
-			<li><a href="#">Motivasi</a></li>
-		</ul>
-		</div>
-	</div>
-</nav>
+		
+		<footer class="art-footer clearfix">
+			  <div class="art-footer-inner">
+				<div class="art-content-layout">
+					<div class="art-content-layout-row">
+					<div class="art-layout-cell layout-item-0" style="width: 3  0%">
+						<p style="float:right"><a href="#">Tentang Kami</a>&nbsp;&nbsp; &nbsp;| &nbsp; &nbsp;<a href="#">Contact</a>&nbsp;&nbsp; &nbsp;| &nbsp; &nbsp;
+							<a href="#">Syarat & Ketentuan</a></p>
+					</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 
-<!- First Container ->
-<div class="container-fluid bg-1 text-center">
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-	<h3 class="margin">Who Am I?</h3>
-	<div class="carousel-inner">
-      <div class="item active">
-		<img src="aulazahra3.jpeg" class="img-responsive img-circle margin" style="display:inline" alt="diri" width="350"
-height="350">
-		<h3>Im Student</h3>
-	  </div>
-	  <div class="item">
-        <img src="aulazahra2.jpeg" alt="IPM" style="display:inline" alt="diri" width="350"
-height="350">
-      </div>
-	  <div class="item">
-        <img src="aulazahra.jpeg" alt="IPM" style="display:inline" alt="diri" width="350"
-height="350">
-      </div>
-    </div>
 </div>
-<div class="container">
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
-
-
-<!- Second Container ->
-<div class="container-fluid bg-2 text-center">
-	<h3 class="margin" What Am I?</h3>
-	<p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p
-	<a href="#" class="btn btn-default btn-lg">
-<span class="glyphicon glyphicon-search"></span> Search
-	</a>
-</div>
-
-<!third container (grid) ->
-<div class="container-fluid bg-3 text-center">
-	<h3 class="margin">Where To Find Me?</h3><br>
-	<div class="row">
-	<div class="col-sm-4">
-	<p>Cabang olahraga Karate, sudah saya ikuti sejak kelas 3 SD, dan masih saya geluti sampai sekarang, yang dimana saya juga mengikuti ukm karate KKI UAD, walaupun sebelumnya saya berasal dari perguruan INKANAS, tapi hal tersebut tidak menghambat saya dalam meraih ilmu dan prestasi.</p>
-		<img src="aulazahra1.jpeg" class="img-responsive margin" style="width:100%" alt="Image">
-	</div>
-	<div class="col-sm-4">
-		<p>Cabang Olahraga bola Volly, untuk cabang olahraga ini saya baru saja mulai terjun ketika saya lulus SMA, tidak ada kata terlambat dalam berlatih dan meraih kesuksesan, kejar usaha mereka dengan berlatih 2-3x lipat dari porsi orang normal, agar bisa mengejar ketertinggalan itu.</p>
-		<img src="aulazahra.jpeg" class="img-responsive margin" style="width:100%" alt="Image">
-	</div>
-	<div class="col-sm-4">
-		<p>hai, ini aku, Aula Zahra, seorang mahasiswa rantau yang berasal dari Kalimantan Tengah, yang mencoba menuntut ilmu di kota orang, dengan bermodalkan nekat dan keyakinan, dan penuh harapan dalam membanggakan kedua orang tua.</p>
-		<img src="aulazahra2.jpeg" class="img-responsive margin" style="width:100%" alt="Image">
-	</div>
-	</div>
-</div>
-
-<!-footer->
-<footer class="container-fluid bg-4 text-center">
-	<p>Bootstrap Theme Made By <a href="https://www.w3schools.com .w3schools.com</a></p>
-</footer>
-</body>
-</html>
+</body></html>
